[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "textlayout"
version = "0.1.0"
description = "Extract structured text from documents with columnar layouts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Asynkron", email = "info@asynkron.se" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
textlayout = "textlayout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/textlayout"]
